# hpc-debugger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/configure_files/: hpc-debugger-config-version.cmake.in  hpc-debugger-config.cmake.build.in  hpc-debugger-config.cmake.install.in  hpc_debugger_config.hpp.in  hpc_debugger_module.lua.in
cmake/modules/: SetupCompiler.cmake  hpc-debugger-utils.cmake
cmake/tests/: has_filesystem.cpp
dependency/: CMakeLists.txt  spack.yaml
include/hpc-debugger/: debug.h  hpc-debugger.h  signal_handler.h
src/hpc-debugger/: backtrace.cpp  backtrace.h  debug.cpp  signal_handler.cpp
src/hpc-debugger/common/: configuration_manager.cpp  configuration_manager.h  constants.h  logging.h  singleton.h
tests/: CMakeLists.txt  test.cpp
